src/main/python/compilerParser.py
# Generated from c:/Users/tomas/OneDrive/Documents/GitHub/DHS2025-calvo-/src/main/python/compiler.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class compilerParser ( Parser ):

    grammarFileName = "compiler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", "'&&'", 
                     "'||'", "'++'", "'--'", "<INVALID>", "<INVALID>", "'int'", 
                     "'double'", "'float'", "'if'", "'else'", "'for'", "'while'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "PA", "PC", "LLA", "LLC", "CA", "CC", 
                      "PYC", "COMA", "ASIG", "SUMA", "RESTA", "MULT", "DIV", 
                      "MOD", "MENOREQ", "MAYOREQ", "EQUAL", "NEQUAL", "MENOR", 
                      "MAYOR", "AND", "OR", "INCREMENTO", "DECREMENTO", 
                      "DECIMAL", "NUMERO", "INT", "DOUBLE", "FLOAT", "IF", 
                      "ELSE", "FOR", "WHILE", "RETURN", "ID", "WS", "OTRO" ]

    RULE_programa = 0
    RULE_instrucciones = 1
    RULE_instruccion = 2
    RULE_bloque = 3
    RULE_iwhile = 4
    RULE_iif = 5
    RULE_ielse = 6
    RULE_ifor = 7
    RULE_forInit = 8
    RULE_listaVarFor = 9
    RULE_listaAsignacionFor = 10
    RULE_asignacionFor = 11
    RULE_declaracion = 12
    RULE_listavar = 13
    RULE_inic = 14
    RULE_tipo = 15
    RULE_asignacion = 16
    RULE_funcion = 17
    RULE_parametros = 18
    RULE_lista_param = 19
    RULE_returnstmt = 20
    RULE_llamada = 21
    RULE_opal = 22
    RULE_disyuncion = 23
    RULE_dis = 24
    RULE_conjuncion = 25
    RULE_con = 26
    RULE_relacion = 27
    RULE_exp = 28
    RULE_e = 29
    RULE_term = 30
    RULE_t = 31
    RULE_factor = 32
    RULE_call = 33
    RULE_argumentos = 34

    ruleNames =  [ "programa", "instrucciones", "instruccion", "bloque", 
                   "iwhile", "iif", "ielse", "ifor", "forInit", "listaVarFor", 
                   "listaAsignacionFor", "asignacionFor", "declaracion", 
                   "listavar", "inic", "tipo", "asignacion", "funcion", 
                   "parametros", "lista_param", "returnstmt", "llamada", 
                   "opal", "disyuncion", "dis", "conjuncion", "con", "relacion", 
                   "exp", "e", "term", "t", "factor", "call", "argumentos" ]

    EOF = Token.EOF
    PA=1
    PC=2
    LLA=3
    LLC=4
    CA=5
    CC=6
    PYC=7
    COMA=8
    ASIG=9
    SUMA=10
    RESTA=11
    MULT=12
    DIV=13
    MOD=14
    MENOREQ=15
    MAYOREQ=16
    EQUAL=17
    NEQUAL=18
    MENOR=19
    MAYOR=20
    AND=21
    OR=22
    INCREMENTO=23
    DECREMENTO=24
    DECIMAL=25
    NUMERO=26
    INT=27
    DOUBLE=28
    FLOAT=29
    IF=30
    ELSE=31
    FOR=32
    WHILE=33
    RETURN=34
    ID=35
    WS=36
    OTRO=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compilerParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(compilerParser.EOF, 0)

        def getRuleIndex(self):
            return compilerParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compilerParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.instrucciones()
            self.state = 71
            self.match(compilerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compilerParser.InstruccionContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(compilerParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compilerParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 23, 24, 27, 28, 29, 30, 32, 33, 34, 35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.instruccion()
                self.state = 74
                self.instrucciones()
                pass
            elif token in [-1, 4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compilerParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(compilerParser.AsignacionContext,0)


        def iif(self):
            return self.getTypedRuleContext(compilerParser.IifContext,0)


        def iwhile(self):
            return self.getTypedRuleContext(compilerParser.IwhileContext,0)


        def ifor(self):
            return self.getTypedRuleContext(compilerParser.IforContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compilerParser.FuncionContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(compilerParser.ReturnstmtContext,0)


        def llamada(self):
            return self.getTypedRuleContext(compilerParser.LlamadaContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compilerParser.BloqueContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compilerParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.declaracion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.iif()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.iwhile()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.ifor()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.funcion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.returnstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.llamada()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(compilerParser.LLA, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(compilerParser.InstruccionesContext,0)


        def LLC(self):
            return self.getToken(compilerParser.LLC, 0)

        def getRuleIndex(self):
            return compilerParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compilerParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(compilerParser.LLA)
            self.state = 91
            self.instrucciones()
            self.state = 92
            self.match(compilerParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IwhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(compilerParser.WHILE, 0)

        def PA(self):
            return self.getToken(compilerParser.PA, 0)

        def opal(self):
            return self.getTypedRuleContext(compilerParser.OpalContext,0)


        def PC(self):
            return self.getToken(compilerParser.PC, 0)

        def instruccion(self):
            return self.getTypedRuleContext(compilerParser.InstruccionContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_iwhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIwhile" ):
                listener.enterIwhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIwhile" ):
                listener.exitIwhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIwhile" ):
                return visitor.visitIwhile(self)
            else:
                return visitor.visitChildren(self)




    def iwhile(self):

        localctx = compilerParser.IwhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_iwhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(compilerParser.WHILE)
            self.state = 95
            self.match(compilerParser.PA)
            self.state = 96
            self.opal()
            self.state = 97
            self.match(compilerParser.PC)
            self.state = 98
            self.instruccion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(compilerParser.IF, 0)

        def PA(self):
            return self.getToken(compilerParser.PA, 0)

        def opal(self):
            return self.getTypedRuleContext(compilerParser.OpalContext,0)


        def PC(self):
            return self.getToken(compilerParser.PC, 0)

        def instruccion(self):
            return self.getTypedRuleContext(compilerParser.InstruccionContext,0)


        def ielse(self):
            return self.getTypedRuleContext(compilerParser.IelseContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_iif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIif" ):
                listener.enterIif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIif" ):
                listener.exitIif(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIif" ):
                return visitor.visitIif(self)
            else:
                return visitor.visitChildren(self)




    def iif(self):

        localctx = compilerParser.IifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_iif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(compilerParser.IF)
            self.state = 101
            self.match(compilerParser.PA)
            self.state = 102
            self.opal()
            self.state = 103
            self.match(compilerParser.PC)
            self.state = 104
            self.instruccion()
            self.state = 105
            self.ielse()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IelseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(compilerParser.ELSE, 0)

        def instruccion(self):
            return self.getTypedRuleContext(compilerParser.InstruccionContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_ielse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIelse" ):
                listener.enterIelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIelse" ):
                listener.exitIelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIelse" ):
                return visitor.visitIelse(self)
            else:
                return visitor.visitChildren(self)




    def ielse(self):

        localctx = compilerParser.IelseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ielse)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(compilerParser.ELSE)
                self.state = 108
                self.instruccion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IforContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(compilerParser.FOR, 0)

        def PA(self):
            return self.getToken(compilerParser.PA, 0)

        def forInit(self):
            return self.getTypedRuleContext(compilerParser.ForInitContext,0)


        def PYC(self, i:int=None):
            if i is None:
                return self.getTokens(compilerParser.PYC)
            else:
                return self.getToken(compilerParser.PYC, i)

        def opal(self):
            return self.getTypedRuleContext(compilerParser.OpalContext,0)


        def asignacionFor(self):
            return self.getTypedRuleContext(compilerParser.AsignacionForContext,0)


        def PC(self):
            return self.getToken(compilerParser.PC, 0)

        def bloque(self):
            return self.getTypedRuleContext(compilerParser.BloqueContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_ifor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfor" ):
                listener.enterIfor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfor" ):
                listener.exitIfor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfor" ):
                return visitor.visitIfor(self)
            else:
                return visitor.visitChildren(self)




    def ifor(self):

        localctx = compilerParser.IforContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(compilerParser.FOR)
            self.state = 113
            self.match(compilerParser.PA)
            self.state = 114
            self.forInit()
            self.state = 115
            self.match(compilerParser.PYC)
            self.state = 116
            self.opal()
            self.state = 117
            self.match(compilerParser.PYC)
            self.state = 118
            self.asignacionFor()
            self.state = 119
            self.match(compilerParser.PC)
            self.state = 120
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compilerParser.TipoContext,0)


        def ID(self):
            return self.getToken(compilerParser.ID, 0)

        def inic(self):
            return self.getTypedRuleContext(compilerParser.InicContext,0)


        def listaVarFor(self):
            return self.getTypedRuleContext(compilerParser.ListaVarForContext,0)


        def listaAsignacionFor(self):
            return self.getTypedRuleContext(compilerParser.ListaAsignacionForContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_forInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInit" ):
                listener.enterForInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInit" ):
                listener.exitForInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInit" ):
                return visitor.visitForInit(self)
            else:
                return visitor.visitChildren(self)




    def forInit(self):

        localctx = compilerParser.ForInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forInit)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27, 28, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.tipo()
                self.state = 123
                self.match(compilerParser.ID)
                self.state = 124
                self.inic()
                self.state = 125
                self.listaVarFor()
                pass
            elif token in [23, 24, 35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.listaAsignacionFor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaVarForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(compilerParser.COMA, 0)

        def ID(self):
            return self.getToken(compilerParser.ID, 0)

        def inic(self):
            return self.getTypedRuleContext(compilerParser.InicContext,0)


        def listaVarFor(self):
            return self.getTypedRuleContext(compilerParser.ListaVarForContext,0)


        def getRuleIndex(self):
            return compilerParser.RULE_listaVarFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaVarFor" ):
                listener.enterListaVarFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaVarFor" ):
                listener.exitListaVarFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaVarFor" ):
                return visitor.visitListaVarFor(self)
            else:
                return visitor.visitChildren(self)




    def listaVarFor(self):

        localctx = compilerParser.ListaVarForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listaVarFor)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(compilerParser.COMA)
                self.state = 131
                self.match(compilerParser.ID)
                self.state = 132
                self.inic()
                self.state = 133
                self.listaVarFor()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaAsignacionForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacionFor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compilerParser.AsignacionForContext)
            else:
                return self.getTypedRuleContext(compilerParser.AsignacionForContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compilerParser.COMA)
            else:
                return self.getToken(compilerParser.COMA, i)

        def getRuleIndex(self):
            return compilerParser.RULE_listaAsignacionFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaAsignacionFor" ):
                listener.enterListaAsignacionFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaAsignacionFor" ):
                listener.exitListaAsignacionFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaAsignacionFor" ):
                return visitor.visitListaAsignacionFor(self)
            else:
                return visitor.visitChildren(self)




    def listaAsignacionFor(self):

        localctx = compilerParser.ListaAsignacionForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listaAsignacionFor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.asignacionFor()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 139
                self.match(compilerParser.COMA)
                self.state = 140
                self.asignacionFor()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compilerParser.ID, 0)

        def ASIG(self):
            return self.getToken(compilerParser.ASIG, 0)

        def opal(self):
            return self.getTypedRuleContext(compilerParser.OpalContext,0)


        def INCREMENTO(self):
            return self.getToken(compilerParser.INCREMENTO, 0)

        def DECREMENTO(self):
            return self.getToken(compilerParser.DECREMENTO, 0)

        def getRuleIndex(self):
            return compilerParser.RULE_asignacionFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacionFor" ):
                listener.enterAsignacionFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacionFor" ):
                listener.exitAsignacionFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacionFor" ):
                return visitor.visitAsignacionFor(self)
            else:
                return visitor.visitChildren(self)




    def asignacionFor(self):

        localctx = compilerParser.AsignacionForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_asignacionFor)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(compilerParser.ID)
                self.state = 147
                self.match(compilerParser.ASIG)
                self.state = 148
                self.opal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(compilerParser.ID)
                self.state = 150
                self.match(compilerParser.INCREMENTO)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(compilerParser.ID)
                self.state = 152
                self.match(compilerParser.DECREMENTO)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(compilerParser.INCREMENTO)
                self.state = 154
                self.match(compilerParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 155
                self.match(compilerParser.DECREMENTO)
                self.state = 156
                self.match(compilerParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compilerParser.TipoContext,0)


        def ID(self):
            return self.getToken(compilerParser.ID, 0)

        def inic(self):
            return self.getTypedRuleContext(compilerParser.InicContext,0)


        def listavar(self):
            return self.getTypedRuleContext(compilerParser.ListavarContext,0)


        def PYC(self):
            return self.getToken(compilerParser.PYC, 0)

        def getRuleIndex(self):
            return compilerParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):
